[tool.poetry]
name = "clue"
version = "0.1.0"
description = ""
authors = ["Joe Hale <joe@jjhale.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pettingzoo = "^1.22.3"
numpy = "1.23.1"
tianshou = "0.5.0"



[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.982"
debugpy = "^1.6.3"
pre-commit = "^2.21.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
files = "**/*.py"
namespace_packages = true

[[tool.mypy.overrides]]
module = ["pettingzoo.*"]

ignore_missing_imports = true
